Add docker-compose and update application.yaml

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
   implementation 'org.jetbrains.kotlin:kotlin-reflect'
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
   implementation 'org.springframework.kafka:spring-kafka'
+  runtimeOnly 'org.postgresql:postgresql'
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
