--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,11 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
   implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
   implementation 'io.projectreactor.kotlin:reactor-kotlin-extensions'
+  implementation 'org.liquibase:liquibase-core'
   implementation 'org.jetbrains.kotlin:kotlin-reflect'
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
   implementation 'org.springframework.kafka:spring-kafka'
   runtimeOnly 'org.postgresql:postgresql'
-  compileOnly 'org.projectlombok:lombok'
-  annotationProcessor 'org.projectlombok:lombok'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.springframework.boot:spring-boot-testcontainers'
   testImplementation 'io.projectreactor:reactor-test'
