--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
+  id 'groovy'
   id 'org.springframework.boot' version '3.2.2'
   id 'io.spring.dependency-management' version '1.1.4'
   id 'org.jetbrains.kotlin.jvm' version '1.9.22'
@@ -34,11 +35,21 @@ dependencies {
   implementation 'org.jetbrains.kotlin:kotlin-reflect'
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
   implementation 'org.springframework.kafka:spring-kafka'
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+  testImplementation 'org.spockframework:spock-core'
+  testImplementation 'org.spockframework:spock-core'
+  testImplementation 'org.spockframework:spock-core'
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
   runtimeOnly 'org.postgresql:postgresql'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+  testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
+  testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
   testImplementation 'io.projectreactor:reactor-test'
   testImplementation 'org.springframework.kafka:spring-kafka-test'
+  testImplementation 'io.mockk:mockk:1.13.7'
   testImplementation 'org.testcontainers:junit-jupiter'
   testImplementation 'org.testcontainers:kafka'
 }
